force-app/main/default/objects/Recurring_Schedule__c/Recurring_Schedule__c.object-meta.xml
<CustomObject>
    <label>Recurring Schedule</label>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>