force-app/main/default/objects/Recurring_Schedule__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>"Matematik"</defaultValue>
    <label>Branch</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>