force-app/main/default/objects/Recurring_Schedule__c/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <label>Day of Week</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pazartesi</fullName>
                <default>true</default>
                <label>Pazartesi</label>
            </value>
            <value>
                <fullName>Salı</fullName>
            </value>
            <value>
                <fullName>Çarşamba</fullName>
            </value>
            <value>
                <fullName>Perşembe</fullName>
            </value>
            <value>
                <fullName>Cuma</fullName>
            </value>
            <value>
                <fullName>Cumartesi</fullName>
            </value>
            <value>
                <fullName>Pazar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>