force-app/main/default/objects/Recurring_Schedule__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>