force-app/main/default/objects/Recurring_Schedule__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Recurring Schedules</relationshipLabel>
    <relationshipName>Recurring_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>